--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,82 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
+@article{das2025f3,
+  abbr={review Sci. Robo.},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  title={Fast Feature Field (F³): A Predictive Representation of Events},
+  author={Das, Richeek and Daniilidis, Kostas and Chaudhari, Pratik},
+  journal={Under review at Science Robotics},
+  year={2025},
+  selected={true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+@article{das2024performance,
+  abbr={Signal Process.},
+  title = {Performance bounds for LASSO under multiplicative LogNormal noise: applications to pooled RT-PCR testing},
+  journal = {Signal Processing},
+  volume = {214},
+  pages = {109233},
+  year = {2024},
+  doi = {https://doi.org/10.1016/j.sigpro.2023.109233},
+  url = {https://www.sciencedirect.com/science/article/pii/S0165168423003079},
+  code = {https://github.com/sudoRicheek/Weighted-LASSO-MGN-Simulations},
+  author = {Richeek Das and Aaron Jerry Ninan and Adithya Bhaskar and Ajit Rajwade},
   selected={true},
-  inspirehep_id = {3255}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{das2023fairer,
+  abbr={NeurIPS WS},
+  title={Fairer and more accurate tabular models through NAS},
+  author={Das, Richeek and Dooley, Samuel},
+  booktitle={NeurIPS 2023 Workshop},
+  year={2023}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{das-etal-2023-improving,
+    abbr={ACL},
+    title = "Improving pretraining techniques for code-switched {NLP}",
+    author = "Das, Richeek  and
+      Ranjan, Sahasra  and
+      Pathak, Shreya  and
+      Jyothi, Preethi",
+    booktitle = "ACL Association for Computational Linguistics",
+    year = "2023",
+    url = "https://aclanthology.org/2023.acl-long.66/",
+    doi = "10.18653/v1/2023.acl-long.66",
+    pages = "1176--1191",
+    selected={true},
+    award = "🏆 Outstanding Paper Award (Top 1% of accepted papers)",
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{pmlr-v177-markham22a,
+  abbr={CLeaR},
+  title = 	 {A distance covariance-based kernel for nonlinear causal clustering in heterogeneous populations},
+  author =       {Markham, Alex and Das, Richeek and Grosse-Wentrup, Moritz},
+  booktitle = 	 {Conference on Causal Learning and Reasoning},
+  pages = 	 {542--558},
+  year = 	 {2022},
+  pdf = 	 {https://proceedings.mlr.press/v177/markham22a/markham22a.pdf},
+  url = 	 {https://proceedings.mlr.press/v177/markham22a.html}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{erlei2022worth,
+  abbr={CHI},
+  author = {Erlei, Alexander and Das, Richeek and Meub, Lukas and Anand, Avishek and Gadiraju, Ujwal},
+  title = {For what it's worth: humans overwrite their economic self-interest to avoid bargaining with AI systems},
+  year = {2022},
+  url = {https://doi.org/10.1145/3491102.3517734},
+  doi = {10.1145/3491102.3517734},
+  selected={true},
+  booktitle = {ACM CHI Conference on Human Factors in Computing Systems},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{tiwari2022exploring,
+  abbr={ICASSP},
+  author={Tiwari, Ashish and Das, Richeek and Raman, Shanmuganathan},
+  booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing}, 
+  title={Exploring deeper graph convolutions for semi-supervised node classification}, 
+  year={2022},
+  pages={5463-5467},
+  doi={10.1109/ICASSP43922.2022.9746333}
 }
