--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,8 +7,7 @@
   title={Fast Feature Field (F³): A Predictive Representation of Events},
   author={Das, Richeek and Daniilidis, Kostas and Chaudhari, Pratik},
   journal={Under review at Science Robotics},
-  year={2025},
-  selected={true}
+  year={2025}
 }
 
 @article{das2024performance,
