--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,12 +2,12 @@
 ---
 
 @article{das2025f3,
-  abbr={review Sci. Robo.},
-  bibtex_show={true},
+  abbr={In Submission},
   title={Fast Feature Field (F³): A Predictive Representation of Events},
   author={Das, Richeek and Daniilidis, Kostas and Chaudhari, Pratik},
-  journal={Under review at Science Robotics},
-  year={2025}
+  journal={in submission},
+  year={2025},
+  selected={true},
 }
 
 @article{das2024performance,
